# Job-Agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README_AI_RULES.md  TODO.md  docker-compose.yaml  package-lock.json  package.json
backend/: openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 00e191b3e6e3_initial_schema.py  4346c6b9d902_add_job_s_application.py  a1b2c3d4e5f6_add_cv_is_active.py  b2f1c0a9d3e7_add_cv_embedding.py  b7c8d9e0f1a2_add_documents_outreach.py
backend/app/: exceptions.py  main.py
backend/app/api/: deps.py  errors.py
backend/app/core/: config.py  countries.py  db.py  logger.py  security.py
backend/app/integrations/: ai_factory.py  apify_client.py  embeddings.py  openai_client.py  postmark.py  s3.py  text_extract.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  application.py  base.py  cv.py  generated_document.py  job.py  outreach_email.py  search.py  search_result.py  user.py
backend/app/repositories/: application_repo.py  cv_repo.py  document_repo.py  job_repo.py  outreach_repo.py  search_repo.py
backend/app/schemas/: __init__.py  application.py  cv.py  document.py  job.py  outreach.py  search.py  user.py
backend/app/services/: cv_parsing_service.py  cv_service.py  document_service.py  ingestion_service.py  normalization.py  (+2 more)
backend/scripts/: export_openapi.py
backend/tests/: conftest.py  test_ai_factory.py  test_apify_client.py  test_application_repo.py  test_applications_api.py  test_auth.py  test_countries.py  test_cv_api.py  test_cv_parsing_service.py  test_cv_repo.py  test_cv_service.py  test_embeddings.py  test_errors.py  test_ingestion_service.py  test_job_repo.py  test_jobs_api.py  test_matching_service.py  test_normalization.py  test_postmark_client.py  test_registry.py  test_s3.py  test_search_repo.py  test_searches_api.py  test_source_adzuna.py  test_source_apify_indeed.py  test_source_jooble.py  test_text_extract.py  test_worker_ingest.py
(+155 files in other folders)
