[project]
name = "job-agent-backend"
version = "0.1.0"
description = "FastAPI backend for the AI Job Agent Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "alembic",
    "anyio",
    "pydantic",
    "pydantic-settings",
    "asyncpg",
    "pgvector",
    "arq",
    "redis",
    "fastapi-users[sqlalchemy]",
    "httpx",
    "boto3",
    "python-multipart",
    "filetype",
    "pypdf",
    "python-docx",
    "openai",
    "tenacity",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "testcontainers[postgres]",
    "moto[s3]",
    "ruff",
    "psycopg[binary]",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# The importable package is `app`. Without this, setuptools' flat-layout
# auto-discovery sees multiple top-level dirs (app, alembic, tests, scripts)
# and aborts the build with "Multiple top-level packages discovered".
[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
